--- a/style/style.css
+++ b/style/style.css
@@ -14,8 +14,8 @@ body {
 }
 
 header {
-    background-color: rgba(0, 0, 0, 0.7); 
-    color: #fff;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 20px 0;
 }
 
 .hero {
@@ -39,3 +39,9 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
+
+#reservation{
+
+    text-align:justify;
+}
+
